fix: ensure price has no border right on mobile

--- a/web/checkpoint 2/css/servicos.scss
+++ b/web/checkpoint 2/css/servicos.scss
@@ -9,8 +9,8 @@
 
 	.servico-info {
 		display: flex;
-		padding: 50px 0;
 		justify-content: space-between;
+		margin: 50px 0;
 
 		.container-img {
 			display: flex;
@@ -45,6 +45,10 @@
 					h3 {
 						border-bottom: 2px solid black;
 						border-right: 2px solid black;
+
+						@media only screen and (max-width: 1236px) {
+							border-right: none;
+						}
 					}
 					button {
 						border-bottom: 2px solid black;
